# CSP

./: .gitignore  README.md  compaint.py  conf.py  pyproject.toml  utilities.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  sphinx.yml
115codefilesCSP/: RobotMaze1.py  RobotMaze2.py  RobotMaze3.py  compaint.py  robot_maze1.py  robot_maze2.py  robot_maze3.py
art/: colors.py
art/functions/: abstract_art.py  accursed.py  average.py  average_test.py  catch_a_turtle.py  dice_game.py  func_practice_2.py  func_practice_2_test.py  squares.py  tip.py  unscramble_game.py
art/functions/catch-a-turtle/: catch_a_turtle.py  leaderboard.py
art/turtles/: a_row_of_colored_squares.py  buggy_image.py  cheater.html  circle_of_circles.py  face.py  guessing_game.py  hex_art.py  ladybug_code.py  project.py  schedule.py  shield.py  spiro.py  sprio.py  star_loop.py  tower_of_mod.py  traversing_turtles.py
art/turtles/115codefilesCSP/: robot_maze1.py  robot_maze2.py  robot_maze3.py
csp/: bottom_line.py  compaint.py  utilities.py
csp/art/functions/: abstract_art.py  accursed.py  average_test.py  dice_game.py  func_practice_2.py  func_practice_2_test.py  num_facts.py  unscramble_game.py
csp/art/functions/catch-a-turtle/: catch_a_turtle.py  leaderboard.csv  leaderboard.py
csp/art/functions/catch_a_turtle/: catch_a_turtle.py  leaderboard.py
csp/art/functions/maze/: MazeSpiral.py  maze.py
csp/art/turtles/: a_row_of_colored_squares.py  buggy_image.py  cheater.html  face.py  guessing_game.py  hex_art.py  ladybug_code.py  paint_calc.py  schedule.py  shield.py  spiro.py  traversing_turtles.py  trial.py  warmup_spiral.py
csp/web/CodeReview/: memory.py
csp/web/tkinter/: chat_cpt.py  multifactor.py  multifactorgui.py  simple_window.py  unit_converter.py
csp/web/tkinter/calendar/: countdown_calendar.py  events.csv
csp/web/tkinter/candy_monster/: candy_monster.py  candy_monster_gui.py
csp/web/tkinter/my_first_gui/: simple_window.py
csp/web/tkinter/secret_message/: secret_message.py
docs/: conf.py  requirements.txt
docs/source/: art.md  catch-a-turtle.md  conf.py  index.md  setup.md
src/ap_2023/: __init__.py  main.py
src/csp/: utilities.py
src/csp/art/functions/: abstract_art.py  average.py  dice_game.py  func_practice_2_test.py  unscramble_game.py
src/csp/art/functions/catch_a_turtle/: catch_a_turtle.py
src/csp/art/turtles/: cheater.html  sprio.py  star_loop.py
src/csp/art/turtles/115codefilesCSP/: robot_maze2.py
src/csp/misc/: chat_gpt.py
src/csp/web/tkinter/: unit_converter.py
src/csp/web/tkinter/calendar/: countdown_calendar.py
src/csp/web/tkinter/candy_monster/: candy_monster.py
src/csp/web/tkinter/secret_message/: secret_message.py
tests/ap_2023/: test_main.py
tests/csp/art/functions/: average_test.py  func_practice_2_test.py
turtles/: Untitled-1.ipynb  buggy_image.py  cheater.html  face.py  guessing_game.py  hex_art.py  ladybug_code.py  paint_calc.py  project.py  schedule.py  shield.py  spiro.py  sprio.py  star_loop.py  tower_of_mod.py  traversing_turtles.py  trial.py  warmup_spiral.py
