[tool.poetry]
    authors = [
        "Elisha Dukes <88557639+lishaduck@users.noreply.github.com>",
    ]
    description = "My CSP classwork."
    name = "csp"
    readme = "README.md"
    version = "0.0.0"

    [tool.poetry.dependencies]
        art = "^5.8"
        httplib2 = "^0.21.0"
        python = "^3.10"
        # types-httplib2 = ""
        cirq = "^1.0.0"
        # chardet = "5.0.0"
        # lxml = "^4.9"
        # mypy = "^0.990"
        # mypy-exensions = "^0.4.3"
        # typing-extensions = "^4.4.0"
        furo = "^2022.9.29"
        myst-parser = { version = "^0.18.1", extras = [
            "linkify",
            "replacements",
            "smartquotes",
            "strikethrough",
            "tasklist",
        ] }
    pygame = "^2.1.2"

    [tool.poetry.group.dev.dependencies]
        bandit = "^1.7.4"
        black = { version = "22.10.0", extras = [
            "d",
        ] }
        isort = "5.10.1"
        poetry = "^1.2.2"
        pydocstringformatter = "0.7.2"
        pydocstyle = { version = "^6.1.1", extras = [
            "toml",
        ] }
        pylint = "^2.15.5"
        pylint-pytest = "^1.1.2"
        pytest = "^7.2.0"
        pytest-black = "^0.3.12"
        pytest-cache = "^1.0"
        pytest-subtests = "^0.9.0"
        pyupgrade = "^3.2.2"
        sphinx = "^5.3.0"


[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = ["poetry-core"]


[tool.pylint.main]

    # List of plugins (as comma separated values of python module names) to load,
    # usually to register additional checkers.
    load-plugins = [
        "pylint.extensions.bad_builtin",
        "pylint.extensions.code_style",
        "pylint.extensions.docparams",
        "pylint.extensions.docstyle",
        "pylint.extensions.mccabe",
        "pylint.extensions.typing",
    ]


    # Minimum Python version to use for version dependent checks. Will default to the
    # version used to run pylint.
    py-version = "3.10"

    ignore = ["docs/conf.py"]

    max-line-length = 88

[tool.black]
    line-length = 88
    preview = false


[tool.isort]
    atomic = true
    line_length = 88
    profile = "black"
    skip_gitignore = true


[tool.pytest.ini_options]
